// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should be rendered 1`] = `
<div
  className="card "
  style={
    Object {
      "height": 200,
      "width": 200,
    }
  }
>
  <p
    className="card__title"
  >
    <a />
  </p>
  <div
    className="card__arrow-container"
  >
    <span
      className="card__arrow"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Card should be rendered if it has documentSize prop 1`] = `
<div
  className="card "
  style={
    Object {
      "height": 200,
      "width": 200,
    }
  }
>
  <p
    className="card__title"
  >
    <a />
  </p>
  <div
    className="card__arrow-container"
  >
    <span
      className="card__arrow"
      onClick={[Function]}
    />
  </div>
  <div
    className="card__document-btn"
  >
    <span
      className="card__document-icon"
    />
    <span>
      PDF(
      100k
      )
    </span>
  </div>
</div>
`;
